--- a/packages/webgal/src/UI/Title/title.module.scss
+++ b/packages/webgal/src/UI/Title/title.module.scss
@@ -8,14 +8,33 @@
 .Title_buttonList {
   display: flex;
   position: absolute;
-  left: 0;
+  right: 0;
   min-width: 25%;
   height: 100%;
   justify-content: center;
-  align-items: flex-start;
+  align-items: flex-end;
   flex-flow: column;
   transition: background 0.75s;
-  padding-left: 120px;
+  padding-right: 120px;
+}
+ .Title_main {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 13;
+}
+
+.Title_buttonList {
+  display: flex;
+  position: absolute;
+  right: 0;
+  min-width: 25%;
+  height: 100%;
+  justify-content: center;
+  align-items: flex-end;
+  flex-flow: column;
+  transition: background 0.75s;
+  padding-right: 120px;
 }
 
 .Title_button {
