--- a/packages/webgal/src/UI/Menu/TextPage/textPage.module.scss
+++ b/packages/webgal/src/UI/Menu/TextPage/textPage.module.scss
@@ -1,13 +1,13 @@
 .TextPage_main {
   width: 100%;
   height: 100%;
-  padding: 2em;
-  overflow-y: auto;
+  padding: 1em;
   background: rgba(245, 246, 247, 0.95);
 }
 
 .TextPage_content {
-  max-width: 800px;
+  width: 95%;
+  height: 95%;
   margin: 0 auto;
   padding: 2em;
   background: rgba(255, 255, 255, 0.9);
@@ -17,7 +17,9 @@
 
 .TextPage_text {
   margin-top: 1em;
-  line-height: 1.6;
+  line-height: 1.8;
   color: #333;
-  font-size: 1.1em;
+  font-size: 1.25em;
+  width: 100%;
+  height: calc(100% - 3em);
 }
